--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@ body {
   height: 100%;
   margin: 0;
 }
+a {
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: grey;
+  text-align: center;
+}
