--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@ a {
   background-color: grey;
   text-align: center;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
