--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ a {
 
 h1 {
   text-align: center;
+  font-size: 50px;
 }
 
 #figcaption { 
@@ -34,3 +35,6 @@ div {
   display: block;
 }
 
+img {
+  width 
+}
