--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ h1 {
 }
 
 #featured-property {
-  width: 800px;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;;
 }
 
 div {
