Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ div {
   float: left;
   background-color: red;
   text-align: center;
-  width: 360px;
+  width: 25%;
 
 #details {
   display: block;
