--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ a {
   margin: 0 auto;
   text-align: center;
 }
-
+header {
+  text-align: center;
+}
 h1 {
   text-align: center;
   font-size: 30px;
