--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ section #figcaption {
  font-size: 5px; 
 }
 
-section #featured-property {
+#featured-property {
   width: 100%;
   height: 100%;
   margin: 0 auto;
