--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ figcaption {
  font-size: 5px; 
 }
 
-#featured-property {
+#featured-property p {
   width: 100%;
   height: 100%;
   margin: 0 auto;
