--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body {
   margin: 0 auto;
 }
 nav a {
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 0 10px;
   background-color: grey;
   margin: 0 auto;
   text-align: center;
